--- a/js/packages/fair-launch/.env
+++ b/js/packages/fair-launch/.env
@@ -1,7 +1,6 @@
 REACT_APP_CANDY_MACHINE_ID=
 
-REACT_APP_SOLANA_NETWORK=mainnet-beta
-REACT_APP_SOLANA_RPC_HOST=https://api.mainnet-beta.solana.com
-
+REACT_APP_SOLANA_NETWORK=devnet
+REACT_APP_SOLANA_RPC_HOST=https://solana--devnet.datahub.figment.io/apikey/fbb4f00427594e23bfb341c060e6348a
 # Phase 1
-REACT_APP_FAIR_LAUNCH_ID=
+REACT_APP_FAIR_LAUNCH_ID=8Xg2PCwCdkrAf94FaVqAJtCt5dsryT9RjoK8KG3FgMKD
