funny little french fellas

--- a/rust/Anchor.toml
+++ b/rust/Anchor.toml
@@ -14,4 +14,4 @@ gumdrop = "gdrpGjVffourzkdDRrQmySw4aTHr8a3xmQzzxSwFD1a"
 test = "ts-mocha -p ./tsconfig.json -t 1000000 test/*.ts"
 
 [workspace]
-members = ["nft-candy-machine"]
+members = ["always-win-flp"]
