--- a/js/packages/fair-launch/.env
+++ b/js/packages/fair-launch/.env
@@ -1,6 +1,6 @@
-REACT_APP_CANDY_MACHINE_ID=GQ9q4abZtnA9pri2VKagTWtTthdguZLNRK9wpYi2XzvR
+REACT_APP_CANDY_MACHINE_ID=
 
-REACT_APP_SOLANA_NETWORK=devnet
-REACT_APP_SOLANA_RPC_HOST=https://solana--devnet.datahub.figment.io/apikey/fbb4f00427594e23bfb341c060e6348a
+REACT_APP_SOLANA_NETWORK=mainnet-beta
+REACT_APP_SOLANA_RPC_HOST=https://solana--mainnet.datahub.figment.io/apikey/fbb4f00427594e23bfb341c060e6348a
 # Phase 1
-REACT_APP_FAIR_LAUNCH_ID=4KRP7qws6y8Mh54ry5uBW4grrbsim8i2HuEKNodPnPvQ
+REACT_APP_FAIR_LAUNCH_ID=2c9f5iJupdatBukZmdmUdexTd1MqyXPD3NjWJaQXuay4
