--- a/js/packages/fair-launch/package.json
+++ b/js/packages/fair-launch/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cross-env": "*",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -35,7 +36,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy:gh": "gh-pages -d ./build/ --repo https://github.com/staccDOTsol/absolutely_fair_launch -t true --branch gh-pages-3",
+    "deploy:gh": "gh-pages -d ./build/ --repo https://github.com/staccDOTsol/frog_flp -t true --branch gh-pages-3",
     "deploy": "cross-env ASSET_PREFIX=/metaplex/ yarn build && yarn deploy:gh"
   },
   "eslintConfig": {
